--- a/README.org
+++ b/README.org
@@ -101,8 +101,8 @@ export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${PWD}/lib
    
 * Acknowledgments
 
-![European flag](https://trex-coe.eu/sites/default/files/inline-images/euflag.jpg)
-[TREX: Targeting Real Chemical Accuracy at the Exascale](https://trex-coe.eu)
+[[https://trex-coe.eu/sites/default/files/inline-images/euflag.jpg]]
+[[https://trex-coe.eu][TREX: Targeting Real Chemical Accuracy at the Exascale]]
 project has received funding from  the European Union’s Horizon 2020 -
 Research and  Innovation program -  under grant agreement  no. 952165.
 The content  of this document  does not  represent the opinion  of the
