--- a/README.org
+++ b/README.org
@@ -31,11 +31,11 @@ make
 
   and the library will be built in the =lib/= directory.
 
-** Important
-
+  #+BEGIN_IMPORTANT
    To run  the examples,  you need to  set the the  path to  the =lib=
    directory  into your  =LD_LIBRARY_PATH=  environment variable,  for
    instance:
+  #+END_IMPORTANT
 
    #+BEGIN_SRC
 export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${PWD}/lib
